--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "@walletconnect/web3-provider": "^1.7.4",
+    "bootstrap": "^5.1.3",
     "moralis": "^1.3.5",
     "next": "latest",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
     "react-moralis": "^1.3.2"
   },
