--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
-    "react-moralis": "^1.3.2"
+    "react-moralis": "^1.3.2",
+    "react-web3-auth": "^0.2.1"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
