--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@walletconnect/web3-provider": "^1.7.4",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.0",
     "ethers": "^5.6.4",
     "moralis": "^1.3.5",
     "next": "latest",
